--- a/res/values-hy/strings.xml
+++ b/res/values-hy/strings.xml
@@ -1347,8 +1347,8 @@
     <string name="network_reset_not_available" msgid="7188610385577164676">"Ցանցի վերակայումը հասանելի չէ այս օգտատիրոջ"</string>
     <string name="reset_network_complete_toast" msgid="787829973559541880">"Ցանցի կարգավորումները վերակայվել են"</string>
     <string name="master_clear_title" msgid="3531267871084279512">"Ջնջել բոլոր տվյալները (գործարանային վերակայում)"</string>
-    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"Սա կջնջի բոլոր տվյալները ձեր պլանշետի "<b>" ներքին պահոցից"</b>", այդ թվում՝\n\n"<li>"Ձեր Google հաշիվը"</li>\n<li>"Համակարգի և հավելվածների տվյալներն ու կարգավորումները"</li>\n<li>"Ներբեռնված հավելվածները"</li></string>
-    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"Կջնջվեն բոլոր տվյալները ձեր սարքի "<b>"ներքին հիշողությունից"</b>", ներառյալ`\n\n"<li>"ձեր Google հաշիվը"</li>\n<li>"համակարգի և հավելվածների տվյալներն ու կարգավորումները"</li>\n<li>"ներբեռնված հավելվածները"</li></string>
+    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"Սա կջնջի բոլոր տվյալները ձեր պլանշետի "<b>" ներքին պահոցից"</b>", այդ թվում՝\n\n"<li>"Ձեր /e/ հաշիվը"</li>\n<li>"Համակարգի և հավելվածների տվյալներն ու կարգավորումները"</li>\n<li>"Ներբեռնված հավելվածները"</li></string>
+    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"Կջնջվեն բոլոր տվյալները ձեր սարքի "<b>"ներքին հիշողությունից"</b>", ներառյալ`\n\n"<li>"ձեր /e/ հաշիվը"</li>\n<li>"համակարգի և հավելվածների տվյալներն ու կարգավորումները"</li>\n<li>"ներբեռնված հավելվածները"</li></string>
     <string name="master_clear_accounts" product="default" msgid="6412857499147999073">\n\n"Հաշիվներն այս սարքում՝\n"</string>
     <string name="master_clear_other_users_present" product="default" msgid="5161423070702470742">\n\n"Այս սարքում այլ օգտատերերի հաշիվներ կան:\n"</string>
     <string name="master_clear_desc_also_erases_external" msgid="1903185203791274237"><li>"Երաժշտություն"</li>\n<li>"Լուսանկարներ"</li>\n<li>"Օգտվողի այլ տվյալներ"</li></string>
