--- a/res/values-my/strings.xml
+++ b/res/values-my/strings.xml
@@ -1348,7 +1348,7 @@
     <string name="reset_network_complete_toast" msgid="787829973559541880">"ကွန်ရက်ချိန်ညှိချက်များ ပြန်လည်သတ်မှတ်ပြီးပါပြီ"</string>
     <string name="master_clear_title" msgid="3531267871084279512">"ဒေတာအားလုံးဖျက်ခြင်း (စက်ရုံထုတ်ဆက်တင် သတ်မှတ်ရန်)"</string>
     <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"ဤသည်မှာ သင့်တက်ဘလက်ထဲရှိ"<b></b>"သင့်ဂူးဂဲလ်အကောင့်\n\n"<li>"စနစ်နှင့် အက်ပ်ဒေတာနှင့် ဆက်တင်များ"</li>\n<li>"ဒေါင်းလုပ်ပြုလုပ်ထားသော အက်ပ်"</li>"iအပါအဝင်\n"<li>"စက်အတွင်းသိမ်းဆည်းထားခြင်း"</li>"များကို ဖျက်ပါလိမ့်မည်"</string>
-    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"ဤသည်က သင့်ဖုန်း၏"<b>"စက်အတွင်းသိုလှောင်မှု"</b>" အပါအဝင် အောက်ပါတို့ကို ဖျက်ပါလိမ့်မည်- \n\n"<li>"သင်၏ Google အကောင့်"</li>\n<li>"စနစ်နှင့် အက်ပ်ဒေတာ၊ ဆက်တင်များ၊"</li>\n<li>"ဒေါင်းလုဒ်လုပ်ထားသည့်အက်ပ်များ"</li></string>
+    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"ဤသည်က သင့်ဖုန်း၏"<b>"စက်အတွင်းသိုလှောင်မှု"</b>" အပါအဝင် အောက်ပါတို့ကို ဖျက်ပါလိမ့်မည်- \n\n"<li>"သင်၏ /e/ အကောင့်"</li>\n<li>"စနစ်နှင့် အက်ပ်ဒေတာ၊ ဆက်တင်များ၊"</li>\n<li>"ဒေါင်းလုဒ်လုပ်ထားသည့်အက်ပ်များ"</li></string>
     <string name="master_clear_accounts" product="default" msgid="6412857499147999073">\n\n"သင်သည် လက်ရှိတွင် အောက်ပါအကောင့်များကို ဝင်ရောက်ထားပါသည်\n"</string>
     <string name="master_clear_other_users_present" product="default" msgid="5161423070702470742">\n\n"ဤစက်ပစ္စည်းပေါ်တွင် အခြားအသုံးပြုသူများလဲ ရှိသည်။\n"</string>
     <string name="master_clear_desc_also_erases_external" msgid="1903185203791274237"><li>"သီချင်း"</li>\n<li>"ဓာတ်ပုံများ"</li>\n<li>"အသုံးပြုသူ၏တခြားဒေတာ"</li></string>
