--- a/res/values-da/strings.xml
+++ b/res/values-da/strings.xml
@@ -1347,8 +1347,8 @@
     <string name="network_reset_not_available" msgid="7188610385577164676">"Gendannelse af netværk er ikke tilgængeligt for denne bruger"</string>
     <string name="reset_network_complete_toast" msgid="787829973559541880">"Netværksindstillingerne er blevet nulstillet"</string>
     <string name="master_clear_title" msgid="3531267871084279512">"Ryd alle data (gendan fabriksindstillinger)"</string>
-    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"Dette sletter alle data fra tablettens "<b>"interne lagerplads"</b>", f.eks.: \n\n"<li>"Din Google-konto"</li>\n<li>"Data og indstillinger for system og apps"</li>\n<li>"Downloadede apps"</li></string>
-    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"Dette sletter alle data fra telefonens "<b>"interne lagerplads"</b>", f.eks.: \n\n"<li>"din Google-konto"</li>\n<li>"data og indstillinger for system og apps"</li>\n<li>"downloadede apps"</li></string>
+    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"Dette sletter alle data fra tablettens "<b>"interne lagerplads"</b>", f.eks.: \n\n"<li>"Din /e/-konto"</li>\n<li>"Data og indstillinger for system og apps"</li>\n<li>"Downloadede apps"</li></string>
+    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"Dette sletter alle data fra telefonens "<b>"interne lagerplads"</b>", f.eks.: \n\n"<li>"din /e/-konto"</li>\n<li>"data og indstillinger for system og apps"</li>\n<li>"downloadede apps"</li></string>
     <string name="master_clear_accounts" product="default" msgid="6412857499147999073">\n\n"Du er i øjeblikket logget ind på disse konti:\n"</string>
     <string name="master_clear_other_users_present" product="default" msgid="5161423070702470742">\n\n"Der er andre brugere til stede på denne enhed.\n"</string>
     <string name="master_clear_desc_also_erases_external" msgid="1903185203791274237"><li>"Musik"</li>\n<li>"Billeder"</li>\n<li>"Andre brugerdata"</li></string>
