--- a/res/values-mk/strings.xml
+++ b/res/values-mk/strings.xml
@@ -1347,8 +1347,8 @@
     <string name="network_reset_not_available" msgid="7188610385577164676">"Мрежното ресетирање не е достапно за овој корисник"</string>
     <string name="reset_network_complete_toast" msgid="787829973559541880">"Мрежните поставки се ресетирани"</string>
     <string name="master_clear_title" msgid="3531267871084279512">"Избриши ги сите податоци (фабричко ресетирање)"</string>
-    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"Ова ќе ги избрише сите податоци од "<b>"внатрешна меморија"</b>"на вашиот таблет, заедно со:\n\n"<li>"вашата сметка на Google"</li>\n<li>"податоци и поставки на систем и апликации"</li>\n<li>"преземени апликации"</li></string>
-    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"Ова ќе ги избрише сите податоци од "<b>"внатрешната меморија"</b>" на телефонот, заедно со:\n\n"<li>"вашата сметка на Google"</li>\n<li>"податоци и поставки на систем и апликации"</li>\n<li>"преземени апликации"</li></string>
+    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"Ова ќе ги избрише сите податоци од "<b>"внатрешна меморија"</b>"на вашиот таблет, заедно со:\n\n"<li>"вашата сметка на /e/"</li>\n<li>"податоци и поставки на систем и апликации"</li>\n<li>"преземени апликации"</li></string>
+    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"Ова ќе ги избрише сите податоци од "<b>"внатрешната меморија"</b>" на телефонот, заедно со:\n\n"<li>"вашата сметка на /e/"</li>\n<li>"податоци и поставки на систем и апликации"</li>\n<li>"преземени апликации"</li></string>
     <string name="master_clear_accounts" product="default" msgid="6412857499147999073">\n\n"Моментално сте најавени на следниве сметки:\n"</string>
     <string name="master_clear_other_users_present" product="default" msgid="5161423070702470742">\n\n"Присутни се и други корисници на уредот.\n"</string>
     <string name="master_clear_desc_also_erases_external" msgid="1903185203791274237"><li>"Музика"</li>\n<li>"Фотографии"</li>\n<li>"Други податоци за корисникот"</li></string>
