--- a/res/values-pt/strings.xml
+++ b/res/values-pt/strings.xml
@@ -1347,8 +1347,8 @@
     <string name="network_reset_not_available" msgid="7188610385577164676">"A redefinição da rede não está disponível para esse usuário"</string>
     <string name="reset_network_complete_toast" msgid="787829973559541880">"As configurações de rede foram redefinidas"</string>
     <string name="master_clear_title" msgid="3531267871084279512">"Limpar todos os dados (redefinição para configuração original)"</string>
-    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"Esta ação apagará todos os dados do "<b>"armazenamento interno"</b>" do seu tablet, incluindo:\n\n"<li>"Sua Conta do Google"</li>\n<li>"Configurações e dados do sistema e dos apps"</li>\n<li>"Apps transferidos"</li></string>
-    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"Esta ação apagará todos os dados do "<b>"armazenamento interno"</b>" de seu smartphone, incluindo:\n\n"<li>"Sua Conta do Google"</li>\n<li>"Configurações e dados do sistema e dos apps"</li>\n<li>"Apps transferidos"</li></string>
+    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"Esta ação apagará todos os dados do "<b>"armazenamento interno"</b>" do seu tablet, incluindo:\n\n"<li>"Sua Conta do /e/"</li>\n<li>"Configurações e dados do sistema e dos apps"</li>\n<li>"Apps transferidos"</li></string>
+    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"Esta ação apagará todos os dados do "<b>"armazenamento interno"</b>" de seu smartphone, incluindo:\n\n"<li>"Sua Conta do /e/"</li>\n<li>"Configurações e dados do sistema e dos apps"</li>\n<li>"Apps transferidos"</li></string>
     <string name="master_clear_accounts" product="default" msgid="6412857499147999073">\n\n"No momento você está conectado às seguintes contas:\n"</string>
     <string name="master_clear_other_users_present" product="default" msgid="5161423070702470742">\n\n"Há outros usuários presentes neste dispositivo.\n"</string>
     <string name="master_clear_desc_also_erases_external" msgid="1903185203791274237"><li>"Músicas"</li>\n<li>"Fotos"</li>\n<li>"Outros dados do usuário"</li></string>
